# world-cup-2026

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
data/: annexe_c.py  bingo_cards.csv  bingo_scraper.py  boards_in_play.csv  bracket.csv  completed_matches.csv  elo_ratings.tsv  fair_play.csv  fifa_ratings.csv  update_from_xlsx.py
simulation/: __init__.py  bingo_tracker.py  bracket.py  data_loader.py  group_stage.py  knockout.py  match_loader.py  simulator.py  team_name_mapper.py  team_strength.py  third_place.py
webapp/: main.py
webapp/static/: index.html
