[project]
name = "world-cup-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "black>=23.0.0",
    "fastapi>=0.104.0",
    "numba>=0.58.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "pytest>=7.4.0",
    "python-multipart>=0.0.6",
    "requests>=2.34.2",
    "uvicorn[standard]>=0.24.0",
]
